src/main/java/com/example/Delivery/Members/Error/DuplicateUsernameException.java
package com.example.Delivery.Members.Error;

public class DuplicateUsernameException extends RuntimeException {
    public DuplicateUsernameException(String message) {
        super(message);
    }
}